# advent-calendar

./: .gitignore  CMakeLists.txt  utils.cpp  utils.hpp
2018/: day2_part1.py  day2_part2.py
2020/day_1/: day1_part1.py  day1_part2.py
2024/day_2/: day2_part1.py  day2_part2.py
2024/day_3/: day3_part1.py  day3_part2.py
day_1/: day1_part2.py  day_1.py  main.cpp
day_2/: day2_part1.py  day2_part2.py
